fix(notification): adding fixes for line-height and text-align on parent causing layout shift.

--- a/packages/web-components/src/components/rux-notification/rux-notification.scss
+++ b/packages/web-components/src/components/rux-notification/rux-notification.scss
@@ -33,6 +33,7 @@
     box-sizing: border-box;
     min-height: var(--height);
     font-size: var(--font-size-base); // fix for parent font-size causing icon shift.
+    line-height: var(--line-height-base); //fixes issue where parent element with larger line-height causes layout shift.
 }
 
 .rux-notification-banner__inner {
